--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.13.0",
     "@mui/icons-material": "^6.2.1",
+    "@reduxjs/toolkit": "^2.5.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
     "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
     "recharts": "^2.13.3",
